# fastapi_base

./: .env  .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-11-22_00-10_e2beabea644f_.py  2024-11-23_19-01_3808f78f4ddf_.py
app/: router.py
app/admin/api/: user.py  user_controller.py
app/admin/crud/: crud_user.py
app/admin/model/: __init__.py  sys_user.py
app/admin/schema/: user.py
app/admin/service/: user_service.py
app/crawl4ai/api/: crawl_controller.py
app/test/: router.py
app/test/hello/: __init__.py  hello.py
common/: log.py  model.py
common/crud/: CRUDBase.py  base_mapper.py  base_service.py  errors.py  types.py  utils.py
common/exception/: exception_handler.py
common/log/: log.py  loguru_cofig.py
common/response/: response_code.py  response_schema.py
core/: conf.py  path_conf.py  registrar.py
core/crawl4ai/: crawler_model.py  crawler_pool.py  crawler_service.py  resource_monitor.py  task_manager.py
database/: db_mysql.py
utils/: serializer.py  snowflake_generator.py  timezone.py  trace_id.py
