[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[project]
name = "fastapi-base"
version = "0.1.0"
description = "fastapi基础架构"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "asgi-correlation-id>=4.3.3",
    "fastapi[all]==0.111.0",
    "loguru>=0.7.2",
    "msgspec>=0.18.6",
    "phonenumbers>=8.13.0",
    "pydantic>=2.9.1",
]
