[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[project]
name = "fastapi-base"
version = "0.1.0"
description = "fastapi基础架构"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "alembic>=1.14.0",
    "asgi-correlation-id>=4.3.3",
    "asyncmy>=0.2.9",
    "crawl4ai[all]>=0.3.746",
    "fastapi[all]==0.111.0",
    "loguru>=0.7.2",
    "msgspec>=0.18.6",
    "phonenumbers>=8.13.0",
    "psutil>=6.1.0",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.30",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=0.7.0",
]
lint = [
    "ruff>=0.7.0",
]

[tool.uv]
package = false
python-downloads = "manual"
default-groups=["dev","lint"]
